--- a/base/templates/base/baas.html
+++ b/base/templates/base/baas.html
@@ -1,5 +1,10 @@
 {% load static %}
 
+
+<script>
+  console.log("This Website Was Made By Dhaval Patil")
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
