--- a/base/templates/base/whe.html
+++ b/base/templates/base/whe.html
@@ -1,20 +1,9 @@
 {% extends 'base/baas.html'%}
 
-
-{% load static %}
-
-
 {% block content %}
-
-<script src="{% static "js/jarvis.js" %}"></script>
     
-<link rel="stylesheet" href="{% static "css/jar.css" %}">
+<h2 style="color: white  ;" >Weather App In Python</h2>
 
-<div>
-  <h3> Weather App </h3>
-
-  <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@DhavalP2/Weather?embed=true"></iframe>
-
-</div>
+<iframe frameborder="10" width="100%" height="700px" src="https://replit.com/@DhavalP2/Weather?embed=true"></iframe>
 
 {% endblock %}
